--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza Calculator</title>
-    <script src="code.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Pizza Calculator</h1>
+    <h3>(Each pizza is $15 plus an additional $1.25 for each topping)</h3>
+    <fieldset>
+        <label for="people">Amount of people splitting the cost of the pizza</label>
+        <input type="number" id="people">
 
-<h1>Price each person has to pay for their pizza:</h1>
-<ul>
-    <li>- One pizza costs $15</li>
-    <li>- $1.25 for each topping</li>
-</ul>
-<button onclick="pizzaCalculator()">Pizza Calculator</button>
+        <label for="toppings">How many toppings?</label>
+        <input type="number" id="toppings">
+    </fieldset>
 
+    <br>
+
+    <button>Calculate</button>
+
+    <p class="output">
+        The pizza will cost $<span id="cost"></span> for each person.
+    </p>
+
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+<script src="code.js"></script>
 </body>
 </html>
